# spatrem_parser

./: .gitignore  README.md  compile_rdf.py  lrm_models.py  mag_models.py  main.py  parse_translator_graph.py  process_translations_file.py  process_translators_file.py  pyproject.toml  translation_models.py
spatrem/: import_translators.py  importer.py
spatrem/classes/: __init__.py  base_graph.py  crm.py  lrm.py  magazine.py
spatrem_parser/: __init__.py  datamodels.py  journal_classes.py  lrm_classes.py  mag_models.py  spatrem.py  spatrem_graph.py  spatremodels.py  translations.py
src/spatrem_parser/: __init__.py  datamodels.py
tests/: KA_Translations.csv  KA_Translators.csv  test.sparql  test_base_graph.py  test_lrm_models.py  test_translation_graph.py
