[tool.poetry]
name = "spatrem-parser"
version = "0.1.0"
description = ""
authors = ["cwulfman <cwulfman@princeton.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shortuuid = "^1.0.11"
rdflib = "^6.3.2"
pydantic = "^1.10.7"
typer = "^0.7.0"
python-lsp-server = "^1.7.4"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.301"
pytest = "^7.2.2"
isort = "^5.12.0"
pytest-watch = "^4.2.0"


[tool.poetry.group.lint.dependencies]
pylint = "^2.17.4"
ruff = "^0.0.262"
black = "^23.3.0"
mypy = "^0.950"
pyflakes = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
